@@ -78,7 +78,7 @@ static int map_if_lk24(int sg_fd, const char * device_name, int rw,
 #include "sg_unaligned.h"
 #include "sdparm.h"
 
-static const char * version_str = "1.10 20150207 [svn: r265]";
+static const char * version_str = "1.10 20150428 [svn: r266]";
 
 
 #define MAX_DEV_NAMES 256
